[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/ui/screens/UIHelper.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/screens/ShipScreen.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/screens/UIScreenBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/sprite_sheet.png" type="Texture" id=5]
[ext_resource path="res://resources/fonts/ScreenTitleFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://resources/fonts/RegularFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/fonts/SubtitleFont.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.12549, 0.0823529, 0.176471, 0.588235 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.449295, 0.420089, 0.494336, 0.705882 )

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.933333, 0.545098, 0.392157, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.12549, 0.0823529, 0.176471, 0.588235 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.449295, 0.420089, 0.494336, 0.705882 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.12549, 0.0823529, 0.176471, 0.588235 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.449295, 0.420089, 0.494336, 0.705882 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 144, 160, 16, 16 )
margin = Rect2( 1, 1, 0, 0 )

[node name="ShipScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="UIScreenBackground" parent="." instance=ExtResource( 4 )]

[node name="UIHelper" parent="." instance=ExtResource( 1 )]

[node name="Console" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_styles/panel = SubResource( 6 )

[node name="LeftPanel" type="VBoxContainer" parent="Console"]
anchor_left = 0.07
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.9
custom_constants/separation = 20

[node name="Title" type="Label" parent="Console/LeftPanel"]
margin_right = 352.0
margin_bottom = 38.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
text = "Ship Control Panel"

[node name="WelcomeMessage" type="HBoxContainer" parent="Console/LeftPanel"]
margin_top = 58.0
margin_right = 352.0
margin_bottom = 84.0

[node name="WelcomeLabel" type="Label" parent="Console/LeftPanel/WelcomeMessage"]
margin_right = 172.0
margin_bottom = 26.0
size_flags_vertical = 1
text = "Welcome back, "

[node name="NameLabel" type="Label" parent="Console/LeftPanel/WelcomeMessage"]
margin_left = 176.0
margin_right = 266.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.913725, 0.411765, 0.215686, 1 )
text = "Captain"

[node name="SentanceEndLabel" type="Label" parent="Console/LeftPanel/WelcomeMessage"]
margin_left = 270.0
margin_right = 276.0
margin_bottom = 26.0
text = "!"

[node name="WelcomeText2" type="Label" parent="Console/LeftPanel"]
margin_top = 104.0
margin_right = 352.0
margin_bottom = 130.0
size_flags_vertical = 1
text = "What would you like to do?"
autowrap = true

[node name="Menu" type="VBoxContainer" parent="Console/LeftPanel"]
margin_top = 150.0
margin_right = 352.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NavigateButton" type="Button" parent="Console/LeftPanel/Menu" groups=["button"]]
margin_right = 352.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "  Navigate"
align = 0

[node name="ShopButton" type="Button" parent="Console/LeftPanel/Menu" groups=["button"]]
margin_top = 60.0
margin_right = 352.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "  Shop"
align = 0

[node name="EquipmentButton" type="Button" parent="Console/LeftPanel/Menu" groups=["button"]]
margin_top = 120.0
margin_right = 352.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "  Equipment"
align = 0

[node name="RightPanel" type="Panel" parent="Console"]
anchor_left = 0.55
anchor_top = 0.05
anchor_right = 0.97
anchor_bottom = 0.95
custom_styles/panel = SubResource( 8 )

[node name="Content" type="Control" parent="Console/RightPanel"]
anchor_left = 0.07
anchor_top = 0.05
anchor_right = 0.93
anchor_bottom = 0.75

[node name="Console" type="Panel" parent="Console/RightPanel"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="Console/RightPanel/Console"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
alignment = 1

[node name="ElixiriteIcon" type="TextureRect" parent="Console/RightPanel/Console/HBoxContainer"]
margin_left = 34.0
margin_right = 134.0
margin_bottom = 69.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
texture = SubResource( 10 )
stretch_mode = 6

[node name="QuantityLabel" type="Label" parent="Console/RightPanel/Console/HBoxContainer"]
margin_left = 138.0
margin_top = 9.0
margin_right = 274.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 6 )
text = "* 1000"

[connection signal="pressed" from="Console/LeftPanel/Menu/NavigateButton" to="." method="_on_NavigateButton_pressed"]
[connection signal="pressed" from="Console/LeftPanel/Menu/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Console/LeftPanel/Menu/EquipmentButton" to="." method="_on_EquipmentButton_pressed"]
